[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", 'rlib']

[dependencies]
wasm-bindgen = "0.2.92"
base64 = "0.22.1"
rand = "0.8.5"
rsa = "0.9.6"

[package.metadata.wasm-pack.profile.release] 
wasm-opt = false

[dependencies]
comrak = "0.26.0"
wasm-bindgen = "0.2.92"
